; ModuleID = '/home/carl/AnghaBench/libsodium/src/libsodium/crypto_auth/hmacsha256/extr_auth_hmacsha256.c_crypto_auth_hmacsha256.c'
source_filename = "/home/carl/AnghaBench/libsodium/src/libsodium/crypto_auth/hmacsha256/extr_auth_hmacsha256.c_crypto_auth_hmacsha256.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@crypto_auth_hmacsha256_KEYBYTES = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @crypto_auth_hmacsha256(i8* %0, i8* %1, i64 %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  store i8* %3, i8** %8, align 8
  %10 = load i8*, i8** %8, align 8
  %11 = load i32, i32* @crypto_auth_hmacsha256_KEYBYTES, align 4
  %12 = call i32 @crypto_auth_hmacsha256_init(i32* %9, i8* %10, i32 %11)
  %13 = load i8*, i8** %6, align 8
  %14 = load i64, i64* %7, align 8
  %15 = call i32 @crypto_auth_hmacsha256_update(i32* %9, i8* %13, i64 %14)
  %16 = load i8*, i8** %5, align 8
  %17 = call i32 @crypto_auth_hmacsha256_final(i32* %9, i8* %16)
  ret i32 0
}

declare dso_local i32 @crypto_auth_hmacsha256_init(i32*, i8*, i32) #1

declare dso_local i32 @crypto_auth_hmacsha256_update(i32*, i8*, i64) #1

declare dso_local i32 @crypto_auth_hmacsha256_final(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
